--- a/app/views/current/views/slurry/slurry-project-items.html
+++ b/app/views/current/views/slurry/slurry-project-items.html
@@ -28,7 +28,7 @@
             <h2 class="govuk-heading-m govuk-!-margin-top-6">Low emission precision application equipment</h2>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items" name="project-items" type="checkbox" value="deep or shallow injection" aria-describedby="project-item-hint" {{ checked("project-items", "deep or shallow injection") }}>
+                <input class="govuk-checkboxes__input" id="project-items" name="project-items" type="checkbox" value="deep or shallow injection" {{ checked("project-items", "deep or shallow injection") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items">
                   Deep or shallow injection
                 </label>
