--- a/app/views/current/views/water/start.html
+++ b/app/views/current/views/water/start.html
@@ -37,8 +37,9 @@
       <li>write and send an expression of interest (takes about 30 minutes if you have all the project details)</li>
     </ul>
 
-    <p>If your project fits the priorities and provides value for taxpayers' money, you may be invited to make a full application. It can take up to a month for the Rural Payments Agency to assess all projects.
-    </p>
+    <p>It can take up to a month for the Rural Payments Agency to assess an expression of interest.</p>
+
+    <p>You may be invited to make a full application if your project fits the priorities and provides value for taxpayers' money.</p>
 
     <p>You will not automatically get a grant. You are competing against other projects.</p>
 
