Section 1 routing sorted for when section completed

--- a/app/views/current/views/water/check-answers-check-you-can-apply.html
+++ b/app/views/current/views/water/check-answers-check-you-can-apply.html
@@ -136,7 +136,7 @@
           {{ data['public-money'] | capitalize }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="remaining-costs">
+          <a class="govuk-link" href="public-money">
             Change<span class="govuk-visually-hidden"> public money</span>
           </a>
         </dd>
