--- a/app/views/current/views/water/planning-required-condition.html
+++ b/app/views/current/views/water/planning-required-condition.html
@@ -21,7 +21,7 @@
 
       <p>Find out if you need planning permission for your project and start the process as soon as possible. Planning applications can take years.</p>
 
-      <form class="form" action="abstraction-required" method="post">
+      <form class="form" action="{{ nextUrl }}" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
