--- a/app/views/current/views/water/remaining-costs.html
+++ b/app/views/current/views/water/remaining-costs.html
@@ -5,7 +5,7 @@ Meeting the remaining project costs
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="grant">Back</a>
+<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
