--- a/app/views/current/views/water/task-list.html
+++ b/app/views/current/views/water/task-list.html
@@ -16,7 +16,7 @@
         {{serviceName}}
       </h1>
 
-      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">{{ application_status }}</h2>
+      <!-- <h2 class="govuk-heading-s govuk-!-margin-bottom-2">{{ application_status }}</h2> -->
       <p class="govuk-body govuk-!-margin-bottom-7">{{ completed_sections }}</p>
 
       <ul class="app-task-list">
