--- a/app/views/current/views/water/check-answers-project-details-and-benefits.html
+++ b/app/views/current/views/water/check-answers-project-details-and-benefits.html
@@ -26,7 +26,7 @@ Check your answers
           {{ data['project-name'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="irrigation">
+          <a class="govuk-link" href="project">
             Change<span class="govuk-visually-hidden"> project name</span>
           </a>
         </dd>
@@ -39,7 +39,7 @@ Check your answers
           {{ data['project-summary'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="new-irrigation">
+          <a class="govuk-link" href="project">
             Change<span class="govuk-visually-hidden"> project summary</span>
           </a>
         </dd>
