--- a/app/views/current/views/water/project.html
+++ b/app/views/current/views/water/project.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="check-answers-check-you-can-apply">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="irrigation" method="post">
+      <form class="form" action="{{ nextUrl }}" method="post">
 
         <h1 class="govuk-heading-l">
           Project details
