--- a/app/views/current/views/guidance/large-slurry.html
+++ b/app/views/current/views/guidance/large-slurry.html
@@ -10,7 +10,8 @@
 <div class="call-to-action">
 <h2 id="latest-news">Latest news</h2>
 
-<p>Water resource management grants available now. You can apply from DD MONTH YYYY to DD MONTH YYYY. Your project must be completed before you can claim the funding. All claims for funding must be made before DD MONTH YYYY.</p>
+<p>Slurry management grants available now. You can apply from 17 May 2021 to 28 June 2021. Your project must be completed before you can claim the funding. All claims for funding must be made before 31 March 2022.
+</p>
 </div>
 
 <h2 id="who-can-apply">Who can apply</h2>
