--- a/app/views/current/views/water/planning-permission-fail.html
+++ b/app/views/current/views/water/planning-permission-fail.html
@@ -17,7 +17,7 @@
         You cannot apply for a large grant from this scheme
       </h1>
 
-      <p>This grant is available until DD MMMM YYYY</p>
+      <p>This grant is available until 28 November 2021.</p>
 
       <p>Planning permission can take a long time.</p>
 
