--- a/app/views/current/views/water/planning-progress-condition.html
+++ b/app/views/current/views/water/planning-progress-condition.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You may be able to apply for a large countryside productivity grant
+  You may be able to apply for a grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="planning-required">Back</a>
+  <a class="govuk-back-link" href="planning-progress">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You may be able to apply for a large countryside productivity grant
+        You may be able to apply for a grant from this scheme
       </h1>
 
       <p>Check with your local planning authority</p>
