change to content - active voice

--- a/app/views/current/views/water/project.html
+++ b/app/views/current/views/water/project.html
@@ -24,7 +24,7 @@
               Name
             </label>
             <div id="project-summary-hint" class="govuk-hint">
-              This is used as a reference.
+              We will use this as a reference.
             </div>
           <input class="govuk-input" id="project-name" name="project-name" type="text" value="{{ data['project-name'] }}">
         </div>
@@ -35,7 +35,7 @@
               Summary
             </label>
             <div id="project-summary-hint" class="govuk-hint">
-              What the project is, what it will do and what it is aiming to achieve.
+              Tell us what the project is, what it will do and what it is aiming to achieve.
             </div>
             <textarea class="govuk-textarea" id="project-summary" name="project-summary" rows="8" aria-describedby="project-summary-hint">{{ data['project-summary'] }}</textarea>
           </div>
